# hypnos

./: .gitignore  Cargo.toml  PKGBUILD  README.md
configs/: config.json
src/: .gitignore  Cargo.toml  config.rs  dbus.rs  joystick_handler.rs  main.rs  types.rs  wayland.rs
src/configs/: config.json
src/res/: hypnos.service.in
src/src/: config.rs  dbus.rs  main.rs  systemd.rs  types.rs  utils.rs  wayland.rs
